--- a/templates/parciais/nav.html
+++ b/templates/parciais/nav.html
@@ -14,7 +14,7 @@
             </a>
           </li>
           <li class="nav-item">
-           <a class="nav-link" href="{% url 'perfil' %}">Dados Pessoais</a>
+           <a class="nav-link" href="#">Dados Pessoais</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Disciplinas</a>
