pagina home usuario

--- a/templates/parciais/nav.html
+++ b/templates/parciais/nav.html
@@ -9,19 +9,19 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'home' %}">Inicio
+            <a class="nav-link" href="{% url 'home' %}">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-           <a class="nav-link" href="#">Dados Pessoais</a>
+           <a class="nav-link" href="#">Disciplinas</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Disciplinas</a>
+         <li class="nav-item">
+            <a class="nav-link" href="#">Dados Pessoais</a>
           </li>
-          <li class="nav-item">
+           <!--<li class="nav-item">
             <a class="nav-link" href="#">Professores</a>
-          </li>
+          </li>-->
           <li class="nav-item">
             <a class="nav-link" href="#">Sair</a>
           </li>
