--- a/templates/base.html
+++ b/templates/base.html
@@ -15,12 +15,17 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
-
+             <main class="container mt-4 mb-4">
             {%block conteudo%} {%endblock%}
-
+             </main>
         </div>
     </div>
 </div>
+
+
+
+
+
 
  <!--{% include 'parciais/footer.html' %}-->
 
