formulario de cadstro

--- a/disciplina/templates/disciplina/home.html
+++ b/disciplina/templates/disciplina/home.html
@@ -17,7 +17,8 @@
                 {% endif %}
 
                 <div class="card-body">
-                    <h5 class="card-title">{{ disciplina.nome }}</h5>
+                     <a href="{{disciplina.slug}}">
+                         <h5 class="card-title">{{ disciplina.nome }}</h5></a>
                     <p class="card-text">{{ disciplina.titulo }}</p>
 
                 </div>
