--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,10 @@
     <div class="row">
         <div class="col-lg-12">
              <main class="container mt-4 mb-4">
-            {%block conteudo%} {%endblock%}
+                 {% include 'parciais/_messages.html' %}
+                 {%block conteudo%} {%endblock%}
+
+
              </main>
         </div>
     </div>
