--- a/user/templates/user/criar.html
+++ b/user/templates/user/criar.html
@@ -5,13 +5,16 @@
   <h1 class="mt-3 mb-3">Cadastro</h1>
 
 <form method="POST" action="{% url 'criar' %}">
-  {% include 'parciais/_messages.html' %}
+
   {% csrf_token %}
   <div class="form-group">
     <label>Nome</label>
     <input type="text" name="nome" value="{{request.POST.nome}}" class="form-control">
   </div>
-
+    <div class="form-group">
+      <label>Sobrenome</label>
+      <input type="text" name="sobrenome" value="{{request.POST.sobrenome}}" class="form-control">
+    </div>
   <div class="form-group">
     <label>Email</label>
     <input type="email" name="email"  value="{{request.POST.email}}" class="form-control">
