--- a/user/templates/user/homeUsuario.html
+++ b/user/templates/user/homeUsuario.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {%block conteudo %}
-
-
+<h1 class="mt-3 mb-3">{{user.first_name}}</h1>
 <div class="row">
     <div class="col-lg-12" >
         <div class="card-columns">
+
 
             {% for disciplina in disciplinas %}
             <div class="card" style="width: 18rem;">
@@ -38,4 +38,3 @@
     </div>
 </div>
 {% endblock %}
-
