--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -3,8 +3,7 @@
 {% block conteudo %}
   <h1 class="mt-3 mb-3">Login</h1>
 
- {% if user.is_authenticated %}
-
+ {% if not user.is_authenticated %}
 <form method="POST" action="{% url 'login' %}">
   {% csrf_token %}
 
@@ -23,11 +22,8 @@
     <label>Senha</label>
     <input type="password" name="senha"  class="form-control">
   </div>
-
-
   <button type="submit" class="btn btn-primary">Entrar</button>
 </form>
-
 {% endif %}
 
 {% endblock %}
