--- a/disciplina/templates/disciplina/detalhesDisciplina.html
+++ b/disciplina/templates/disciplina/detalhesDisciplina.html
@@ -1,4 +1,4 @@
-<!--{% extends 'base.html' %}
+{% extends 'base.html' %}
 
 {% block conteudo %}
 <div class="row">
@@ -19,7 +19,7 @@
             {{disciplina.professor}}
         </h1>
 
-        <form action="{% url 'reservar' %}" id="data_reserva" >
+        <form action="#" >
         <div class="col-md-6 form-group">
             <label for="data_reserva">Data da Reserva</label>
             <input type="date" class="form-control" id="dateBirth"
@@ -39,4 +39,4 @@
 </div>
 </div>
 
-{% endblock %}-->
+{% endblock %}
