--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -16,14 +16,15 @@
     <!--Fontawesome CDN-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <!--Custom styles-->
-    <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="{% static 'public/LoginCss/login.css'%}" rel="stylesheet">
 </head>
 
     <body class="bg-dark">
 
 <br><br><br>
+{% include 'parciais/_messages.html' %}
 <div class="container">
+
     <div class="d-flex justify-content-center h-80">
         <div class="card card-login mx-auto mt-10">
 
@@ -38,22 +39,15 @@
 
             <div class="card-body">
 
-                   {% if not user.is_authenticated %}
+                   {% if user.is_authenticated %}
 
                   <form method="POST" action="{% url 'login' %}">
                       {% csrf_token %}
-                      {% include 'parciais/_messages.html' %}
 
                       <div class="form-group">
-                          <label>Email</label>
-                          <input type="email" name="email" value="{{request.POST.email}}" class="form-control">
-                      </div>
-
-                      <!--<div class="form-group">
                         <label>Usuario</label>
                         <input type="text" name="usuario" value="{{request.POST.usuario}}" class="form-control">
-                      </div>-->
-
+                      </div>
 
                       <div class="form-group">
                           <label>Senha</label>
@@ -74,8 +68,6 @@
         </div>
     </div>
 </div>
-
-
 
       <!-- Bootstrap core JavaScript-->
     <script src="{% static 'public/bootstrap/vendor/jquery/jquery.min.js'%}"></script>
