adicionando tabela reserva

--- a/disciplina/templates/disciplina/detalhesDisciplina.html
+++ b/disciplina/templates/disciplina/detalhesDisciplina.html
@@ -21,7 +21,7 @@
 
         <form action="#" >
         <div class="col-md-6 form-group">
-            <label for="data_reserva">Data da Reserva</label>
+            <label for="data_reserva">Data Inscrição</label>
             <input type="date" class="form-control" id="dateBirth"
                    name="data_reserva"
                    value="{{ disciplina.data_reserva }}"
@@ -31,7 +31,7 @@
             <div class="text-left">
                 <button type="submit" class="btn btn-primary btn-lg btn-block">
                     <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                    Reservar Disciplina
+                    Inscrever-se
                 </button>
             </div>
         </form>
