--- a/professor/templates/professor/cadastroDisciplina.html
+++ b/professor/templates/professor/cadastroDisciplina.html
@@ -3,9 +3,9 @@
 {% block conteudo %}
 
 <div class="container">
-    <form action="{ url 'cadastroDisciplina'}" method="POST" enctype="multipart/form-data">
+    <form action="{ url 'professor:cadastroDisciplina'}" method="POST" enctype="multipart/form-data">
         <table class="table">
-            {{ form}}
+            {{ form }}
         </table>
 
     </form>
