--- a/templates/parciais/nav.html
+++ b/templates/parciais/nav.html
@@ -23,7 +23,7 @@
             <a class="nav-link" href="#">Professores</a>
           </li>-->
           <li class="nav-item">
-            <a class="nav-link" href="#">Sair</a>
+            <a class="nav-link" href="{% url 'user:logout' %}">Sair</a>
           </li>
         </ul>
       </div>
