--- a/templates/parciais/nav.html
+++ b/templates/parciais/nav.html
@@ -2,14 +2,14 @@
 <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-      <a class="navbar-brand" href="{% url 'disciplina:home' %}">SAsP</a>
+      <a class="navbar-brand" href="{% url 'disciplina:listar' %}">SAsP</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'disciplina:home' %}">Home
+            <a class="nav-link" href="{% url 'disciplina:listar' %}">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -23,7 +23,7 @@
             <a class="nav-link" href="#">Professores</a>
           </li>-->
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'user:logout' %}">Sair</a>
+            <a class="nav-link" href="{% url 'user:user_logout' %}">Sair</a>
           </li>
         </ul>
       </div>
