--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -39,7 +39,7 @@
 
             <div class="card-body">
 
-                   {% if user.is_authenticated %}
+                   {% if not user.is_authenticated %}
 
                   <form method="POST" action="{% url 'user:login' %}">
                       {% csrf_token %}
@@ -57,6 +57,13 @@
                           Entrar
                       </button>
                 </form>
+                {% else %}
+                <p>
+                    Você fez login com {{user}},
+                    <a href="{% url 'user:user_logout' %}">Clique Aqui para Sair</a>
+                </p>
+
+
                 {% endif%}
                 <div class="text">
                     <center>
