--- a/templates/parciais/nav.html
+++ b/templates/parciais/nav.html
@@ -16,9 +16,11 @@
           <li class="nav-item">
            <a class="nav-link" href="#">Disciplinas</a>
           </li>
+         {% if request.user.groups.all.0.name == 'admin' %}
          <li class="nav-item">
             <a class="nav-link" href="#">Dados Pessoais</a>
           </li>
+         {% endif %}
            <!--<li class="nav-item">
             <a class="nav-link" href="#">Professores</a>
           </li>-->
