--- a/templates/parciais/nav.html
+++ b/templates/parciais/nav.html
@@ -13,20 +13,45 @@
               <span class="sr-only">(current)</span>
             </a>
           </li>
-          <li class="nav-item">
-           <a class="nav-link" href="#">Disciplinas</a>
-          </li>
+
+
          {% if request.user.groups.all.0.name == 'admin' %}
-         <li class="nav-item">
-            <a class="nav-link" href="#">Dados Pessoais</a>
-          </li>
-         {% endif %}
-           <!--<li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link" href="#">Professores</a>
           </li>-->
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'user:user_logout' %}">Sair</a>
-          </li>
+          {% endif %}
+
+
+            <li>
+            {% if request.user.is_autenticated %}
+            <div class="dropdown show">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Meus
+                </a>
+
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item" href="#">Minhas Disciplinas</a>
+                    <a class="dropdown-item" href="#">Dados Pessoais</a>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+            </div>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="{% url 'user:logout' %}">Sair</a>
+            </li>
+
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="#">Sobre</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'user:login' %}">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'user:criar' %}">Cadastre-se</a>
+            </li>
+            {% endif %}
         </ul>
       </div>
     </div>
