--- a/templates/parciais/nav.html
+++ b/templates/parciais/nav.html
@@ -6,6 +6,7 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
@@ -15,15 +16,15 @@
           </li>
 
 
-         {% if request.user.groups.all.0.name == 'admin' %}
-          <!--<li class="nav-item">
+        <!-- {% if request.user.groups.all.0.name == 'admin' %}
+          <li class="nav-item">
             <a class="nav-link" href="#">Professores</a>
-          </li>-->
-          {% endif %}
+          </li>
+          {% endif %}-->
 
 
             <li>
-            {% if request.user.is_autenticated %}
+            {% if user.is_autenticated %}
             <div class="dropdown show">
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -37,19 +38,22 @@
                 </div>
             </div>
             </li>
-            <li class="nav-item">
-            <a class="nav-link" href="{% url 'user:logout' %}">Sair</a>
-            </li>
 
             {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="#">Sobre</a>
-            </li>
+
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'user:login' %}">Login</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'user:criar' %}">Cadastre-se</a>
+            </li>
+            {% endif %}
+             <li class="nav-item">
+                <a class="nav-link" href="#">Sobre</a>
+            </li>
+             {% if user.is_autenticated %}
+             <li class="nav-item">
+            <a class="nav-link" href="{% url 'disciplina:logout' %}">Sair</a>
             </li>
             {% endif %}
         </ul>
