--- a/disciplina/templates/disciplina/reservarDisciplina.html
+++ b/disciplina/templates/disciplina/reservarDisciplina.html
@@ -1,8 +1,6 @@
-<h1>teste</h1>
+{% extends 'base.html' %}
 
-<div class="card-body">
-                     <a href="{{ disciplina.slug }}">
-                         <h5 class="card-title">{{ disciplina.nome }}</h5></a>
-                    <p class="card-text">{{ disciplina.titulo }}</p>
+{% block conteudo %}
+<h1>jjjjjjjjjjjjjjjjjjjjjj</h1>
 
-                </div>
+{% endblock %}
