--- a/user/templates/user/editarUsuario.html
+++ b/user/templates/user/editarUsuario.html
@@ -5,7 +5,7 @@
 
 <h1>Alterar Meus Dados</h1>
 
-<!--{% include 'parciais/_messages.html' %}
+{% include 'parciais/_messages.html' %}
 <div class="container">
      <form method="POST" action="{% url 'user:editarUsuario' %}" enctype="multipart/form-data">
          {% csrf_token %}
@@ -21,6 +21,6 @@
 
             </div>
       </form>
-</div>-->
+</div>
 
 {% endblock%}
