--- a/user/templates/user/detalhesUsuario.html
+++ b/user/templates/user/detalhesUsuario.html
@@ -1,8 +1,25 @@
 {% extends 'base.html' %}
 {%block conteudo%}
 
+<div class="page-header">
+    <h2>Update Client</h2>
+</div>
+<div class="row">
+    <div class="col-lg-6">
+        <div class="well bs-component">
+
+            <form method="POST" class="form-horizontal">
+                {% csrf_token %}
+                {{ form.as_p }}
+            <input type="submit" value="Submit" class="btn btn-success">
+            <input type="reset" value="Clear" class="btn btn-warning">
+            </form>
+        </div>
+    </div>
+</div>
+
  <!--{% if  request.user.is_authenticated %}-->
-<table class="table">
+<!--<table class="table">
   <thead>
     <tr>
       <th scope="col">#</th>
@@ -11,7 +28,7 @@
       <th scope="col">Email</th>
       <th scope="col">Senha</th>
       <th scope="col">Telefone</th>
-     <!-- <th scope="col">Imagem</th>-->
+     <th scope="col">Imagem</th>--
       <th scope="col">Ações</th>
     </tr>
   </thead>
@@ -35,7 +52,7 @@
 
     </tr>
   </tbody>
-</table>
+</table>-->
 <!--{% endif %}-->
 
 {% endblock %}
