--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -39,7 +39,7 @@
 
             <div class="card-body">
 
-                {% if  request.user.is_authenticated %}
+                {% if not request.user.is_authenticated %}
                   <form method="POST" action="{% url 'user:login' %}" >
                       {% csrf_token %}
 
