--- a/user/templates/user/reservarDisciplina.html
+++ b/user/templates/user/reservarDisciplina.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %}
-<!--{% load crispy_forms_tags %}-->
+<!--{% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block conteudo %}
 
@@ -23,4 +23,4 @@
       </form>
 </div>
 
-{% endblock%}
+{% endblock%}-->
