--- a/templates/parciais/nav.html
+++ b/templates/parciais/nav.html
@@ -51,7 +51,7 @@
 
                     <a class="dropdown-item" href="{% url 'professor:detail' %}">Minhas Disciplinas</a>
                     <a class="dropdown-item" href="#">Dados Pessoais</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Solicitações</a>
                 </div>
             </div>
             </li>
