--- a/templates/parciais/nav.html
+++ b/templates/parciais/nav.html
@@ -22,7 +22,7 @@
           </li>
           {% endif %}-->
          {% if request.user.is_authenticated %}
-            <!--{% if not user.aluno %}-->
+            {% if  user.aluno %}
          <li>
             <div class="dropdown show">
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
@@ -38,8 +38,8 @@
                 </div>
             </div>
             </li>
-            <!--{% endif %}
-            {% if user.professor %}-->
+            {% endif %}
+            <!--{% if user.professor %}-->
             <li>
             <div class="dropdown show">
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenu"
@@ -57,7 +57,7 @@
             </li>
             <!--{% endif %}-->
             <li class="nav-item">
-                <a class="nav-link" href="#">Sobre</a>
+                <a class="nav-link" href="{% url 'user:minhasDisciplinas' user.id %}">Sobre</a>
             </li>
 
             <li class="nav-item">
@@ -67,6 +67,16 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'user:login' %}">Login</a>
             </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'user:minhasDisciplinas'  %}">Sobre</a>
+            </li>
+
+             <li class="nav-item">
+                <a class="nav-link" href="{% url 'user:reservarDisciplina'  %}">Reservar</a>
+            </li>
+
+
 
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'user:criar' %}">Cadastre-se</a>
