--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -32,14 +32,14 @@
                 <h3>SAsP</h3>
                 <div class="d-flex justify-content-end social_icon">
                     <!--<span><i class="fab fa-facebook-square"></i></span>-->
-                    <span><i class="fab fa-google-plus-square"> </i></span>
+                   <!-- <span><i class="fab fa-google-plus-square"> </i></span>-->
 
                      </div>
                 </div>
 
             <div class="card-body">
 
-                {% if not request.user.is_authenticated %}
+                {% if  not request.user.is_authenticated %}
                   <form method="POST" action="{% url 'user:login' %}" >
                       {% csrf_token %}
 
