alterando status reserva

--- a/templates/parciais/nav.html
+++ b/templates/parciais/nav.html
@@ -72,8 +72,8 @@
                 <a class="nav-link" href="{% url 'user:minhasDisciplinas'  %}">Sobre</a>
             </li>
 
-             <li class="nav-item">
-                <a class="nav-link" href="{% url 'user:reservarDisciplina'  %}">Reservar</a>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'professor:listarPedidosReserva'  %}">Reservar</a>
             </li>
 
 
